did some work in home section

--- a/Proj_2_OnlineEducationWebsiteResponsive/style.css
+++ b/Proj_2_OnlineEducationWebsiteResponsive/style.css
@@ -135,3 +135,72 @@ header .fa-times {
     opacity: 1;
   }
 }
+
+.home {
+  min-height: 100vh;
+  background: linear-gradient(rgba(198, 59, 250, 0.7), rgba(198, 59, 250, 0.7)),
+    url(./images/accessories-composition.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  z-index: 0;
+  overflow: hidden;
+  position: relative;
+}
+
+.home .content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+  padding-top: 14rem;
+  padding-bottom: 8rem;
+  text-align: center;
+}
+.home .content h1 {
+  font-size: 5rem;
+  color: #fff;
+  padding: 0 1rem;
+  text-shadow: 0 0.3rem 0.5rem rgba((0), 0, 0, 0.3);
+  text-transform: uppercase;
+}
+
+.home .content p {
+  font-size: 2rem;
+  color: #eee;
+  padding: 1rem 25rem;
+}
+
+.home .content button {
+  height: 6rem;
+  width: 20rem;
+  border-radius: 5rem;
+  background: var(--indigo);
+  color: #fff;
+  font-size: 2rem;
+  cursor: pointer;
+  transition: 0.2s;
+  border: none;
+  box-shadow: 0 0.3rem 1rem rgba((0), 0, 0, 0.3);
+}
+
+.home .content button:hover {
+  letter-spacing: 0.2rem;
+}
+
+.home .box-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.home .box-container .box {
+  height: 20rem;
+  width: 25rem;
+  background: #fff;
+  text-align: center;
+  border-radius: 1rem;
+  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+  margin: 2rem;
+  cursor: pointer;
+}
