--- a/Proj_2_OnlineEducationWebsiteResponsive/style.css
+++ b/Proj_2_OnlineEducationWebsiteResponsive/style.css
@@ -273,6 +273,58 @@ header .fa-times {
   background: var(--indigo);
 }
 
+.teacher .card-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 2rem 0;
+}
+
+.teacher .card-container .card {
+  padding: 2rem;
+  margin: 2rem;
+  background: #eee;
+  text-align: center;
+  width: 28rem;
+  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.3);
+}
+
+.teacher .card-container .card img {
+  height: 30rem;
+  width: 100%;
+  object-fit: cover;
+  filter: grayscale();
+  transition: 0.2s;
+}
+
+.teacher .card-container .card:hover img {
+  filter: grayscale(0);
+  scale: 1.01;
+  transition: 0.2s;
+}
+
+.teacher .card-container .card h3 {
+  color: var(--indigo);
+  font-size: 2rem;
+  padding: 0.5rem 0;
+}
+
+.teacher .card-container .card p {
+  font-size: 1.7rem;
+  color: #666;
+}
+.teacher .card-container .card a {
+  font-size: 1.9rem;
+  padding: 1.5rem;
+  color: var(--Lilac);
+}
+.teacher .card-container .card a:hover {
+  color: var(--indigo);
+  scale: 1.4;
+}
+
+/* --------------------------------------------------------------------------------------------- */
 @media (max-width: 768px) {
   html {
     font-size: 55%;
