--- a/Proj_2_OnlineEducationWebsiteResponsive/style.css
+++ b/Proj_2_OnlineEducationWebsiteResponsive/style.css
@@ -324,6 +324,52 @@ header .fa-times {
   scale: 1.4;
 }
 
+.courses .box-container {
+  width: 85%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  padding-top: 4rem;
+  flex-wrap: wrap;
+}
+
+.courses .box-container .box {
+  height: 18rem;
+  width: 22rem;
+  margin: 3.5rem 2rem;
+  border-radius: 1rem;
+  text-align: center;
+  box-shadow: 0.3rem 0.3rem 0 0.1rem var(--Lilac),
+    0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3);
+}
+
+.courses .box-container .box i {
+  height: 10rem;
+  width: 10rem;
+  line-height: 8rem;
+  text-align: center;
+  color: #fff;
+  border-radius: 50%;
+  background: var(--Lilac);
+  margin-top: -4rem;
+  border: 1rem solid #fff;
+  border-left: 1rem solid var(--indigo);
+  border-right: 1rem solid var(--indigo);
+  box-shadow: 0 0 0 1rem #ffffff inset;
+  font-size: 3.5rem;
+}
+
+.courses .box-container .box h3 {
+  font-size: 2rem;
+  color: var(--Lilac);
+}
+
+.courses .box-container .box p {
+  font-size: 1.5rem;
+  color: #666;
+  padding: 1rem 0;
+}
+
 /* --------------------------------------------------------------------------------------------- */
 @media (max-width: 768px) {
   html {
@@ -379,6 +425,9 @@ header .fa-times {
   .about .content {
     padding-left: 0rem;
     margin-top: 2rem;
+  }
+  .courses .box-container {
+    width: 100%;
   }
 }
 .about .row .image {
