--- a/Proj_2_OnlineEducationWebsiteResponsive/style.css
+++ b/Proj_2_OnlineEducationWebsiteResponsive/style.css
@@ -370,6 +370,15 @@ header .fa-times {
   padding: 1rem 0;
 }
 
+.about .row .image {
+  width: 100%;
+  height: auto;
+}
+.about .row .image img {
+  height: auto;
+  width: 100%;
+}
+
 .review {
   background: #f9f9f9;
 }
@@ -390,6 +399,12 @@ header .fa-times {
   background: #fff;
   padding: 6rem 2rem;
   box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease;
+}
+
+.review .box-container .box:hover {
+  box-shadow: 0 0.3rem 0.5rem var(--indigo);
+  transform: scale(1.05);
 }
 
 .review .box-container .box img {
@@ -417,6 +432,75 @@ header .fa-times {
 .review .box-container .box i {
   font-size: 1.6rem;
   color: var(--indigo);
+}
+
+.contact {
+  background: #333;
+  margin-top: 2rem;
+}
+.contact h1 {
+  font-size: 4rem;
+  padding: 2.5rem;
+  color: var(--Lilac);
+}
+
+.contact .row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5rem 0;
+}
+.contact .row .form-container {
+  margin: 3rem;
+}
+.contact .row img {
+  width: 50vw;
+  height: 70vh;
+}
+.contact .row .img {
+  margin: 1.5rem;
+  box-shadow: 0 0.3rem 0.5rem var(--Lilac);
+}
+
+.contact .row .form-container input,
+textarea {
+  height: 4rem;
+  width: 100%;
+  background: #fff;
+  border: none;
+  border-radius: 5rem;
+  padding: 0 1rem;
+  margin: 1rem 0;
+  color: var(--indigo);
+  font-size: 1.7rem;
+  transition: 0.2s linear;
+}
+
+.contact .row .form-container input:focus,
+textarea:focus {
+  border: 0.3rem solid var(--Lilac);
+}
+
+.contact .row .form-container textarea {
+  height: 22rem;
+  border-radius: 1rem;
+  padding: 1rem;
+  resize: none;
+}
+
+.contact .row .form-container input[type="submit"] {
+  width: 17rem;
+  background: var(--indigo);
+  color: #fff;
+  cursor: pointer;
+  font-size: 2rem;
+  transition: 0.2s;
+}
+
+.contact .row .form-container input[type="submit"]:hover {
+  background: none;
+  color: var(--Lilac);
+  border: 0.2rem solid var(--Lilac);
 }
 
 /* --------------------------------------------------------------------------------------------- */
@@ -478,12 +562,15 @@ header .fa-times {
   .courses .box-container {
     width: 100%;
   }
-}
-.about .row .image {
-  width: 100%;
-  height: auto;
-}
-.about .row .image img {
-  height: auto;
-  width: 100%;
+  .contact .row {
+    flex-flow: column;
+  }
+  .contact .row img {
+    width: 90vw;
+    height: 50vh;
+  }
+  .contact .row .form-container {
+    width: 90%;
+    padding: 0;
+  }
 }
