--- a/Proj_2_OnlineEducationWebsiteResponsive/style.css
+++ b/Proj_2_OnlineEducationWebsiteResponsive/style.css
@@ -453,13 +453,17 @@ header .fa-times {
 .contact .row .form-container {
   margin: 3rem;
 }
-.contact .row img {
-  width: 50vw;
-  height: 70vh;
-}
+
 .contact .row .img {
   margin: 1.5rem;
   box-shadow: 0 0.3rem 0.5rem var(--Lilac);
+  position: relative;
+  top: -2rem;
+}
+
+.contact .row img {
+  width: 40vw;
+  height: auto;
 }
 
 .contact .row .form-container input,
@@ -501,6 +505,49 @@ textarea:focus {
   background: none;
   color: var(--Lilac);
   border: 0.2rem solid var(--Lilac);
+}
+
+.footer {
+  text-align: center;
+}
+
+.footer .icons {
+  padding: 3rem 0;
+}
+
+.footer .icons a {
+  height: 4.5rem;
+  width: 4.5rem;
+  line-height: 4.2rem;
+  text-align: center;
+  border-radius: 50%;
+  color: var(--Lilac);
+  border: 0.2rem solid var(--Lilac);
+  font-size: 2rem;
+  margin: 0 0.5rem;
+  transition: 0.2s linear;
+}
+
+.footer .icons a:hover {
+  color: #fff;
+  background: var(--indigo);
+  border-color: var(--Lilac);
+  transform: scale(1.3);
+  box-shadow: 0.2rem 0.2rem 0.5rem var(--Lilac);
+}
+
+.footer .credit {
+  font-size: 2rem;
+  border-top: 0.1rem solid #999;
+  margin: 0 auto;
+  margin-bottom: 2rem;
+  color: #666;
+  width: 90%;
+  padding: 1rem 0;
+}
+
+.footer .credit span {
+  color: var(--Lilac);
 }
 
 /* --------------------------------------------------------------------------------------------- */
@@ -567,7 +614,7 @@ textarea:focus {
   }
   .contact .row img {
     width: 90vw;
-    height: 50vh;
+    height: auto;
   }
   .contact .row .form-container {
     width: 90%;
